--- a/portfolio.html.html
+++ b/portfolio.html.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -99,7 +102,7 @@
         
             </li>
             <li>
-                <a href=""">
+                <a href="">
                         <img src=" ./images/project/img-9.jpg" alt="приклад роботи" width="370" height="294">
                     <h1>Growing Business</h1>
                     <p>Додаток</p>
