--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,16 +14,21 @@
 
 <body>
 
-    <header>
+    <header class="page-header">
     <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="./index.html">Студія</a></li>
-                <li><a href="./portfolio.html.html">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+        <!--logo-->
+            
+            <a class="logo" href="./index.html">
+                <span class="logo-web">Web</span>
+                <span class="logo-studio">Studio</span></a>
+
+            <ul class="site-nav">
+                <li><a href="./index.html" class="link">Студія</a></li>
+                <li><a href="./portfolio.html.html" class="link">Портфоліо</a></li>
+                <li><a href="" class="link">Контакти</a></li>
             </ul>
     </nav>
-        <ul>
+        <ul class="auth-nav">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
