--- a/portfolio.html.html
+++ b/portfolio.html.html
@@ -16,19 +16,26 @@
 <body>
 
     <header class="page-header">
-    <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="./index.html">Студія</a></li>
-                <li><a href="./portfolio.html.html">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+        <nav>
+            <!--logo-->
+    
+            <a class="logo" href="./index.html">
+                <span class="logo-web logo">Web</span>
+                <span class="logo-studio logo">Studio</span></a>
+            <!--nav header-->
+            <ul class="site-nav">
+                <li><a href="./index.html" class="link">Студія</a></li>
+                <li><a href="./portfolio.html.html" class="link">Портфоліо</a></li>
+                <li><a href="" class="link">Контакти</a></li>
             </ul>
-    </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </nav>
+        <!--nav header contact-->
+        <ul class="auth-nav">
+            <li><a href="mailto:info@devstudio.com" class="heder-contact">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="heder-contact">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    
     <main>
         <!--кнопки-->
         <ul>
@@ -115,13 +122,15 @@
         </ul>
     </main>
 
-    <footer>
-        <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+        <a class="logo" href="./index.html">
+            <span class="logo-web logo">Web</span>
+            <span class="logo-studio logo">Studio</span></a>
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/ad4JmQGrXdCTPTx86"></a> м. Київ, пр-т Лесі Українки, 26</li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="https://goo.gl/maps/ad4JmQGrXdCTPTx86" class="adres"></a> м. Київ, пр-т Лесі Українки, 26</li>
+                <li><a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
