--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <!--logo-->
             
             <a class="logo" href="./index.html">
-                <span class="logo-web logo">Web</span>
-                <span class="logo-studio logo">Studio</span></a>
+                <span class="logo-web logo">Web</span><span class="logo-studio logo">Studio</span></a>
 <!--nav header-->
             <ul class="site-nav">
                 <li><a href="./index.html" class="link">Студія</a></li>
@@ -77,25 +76,25 @@
         </section>
 
         <!--Наша команда-->
-        <section>
+        <section class="team-section">
             <h2 class="title-team">Наша команда</h2>
             <ul>
-                <li>
+                <li class="list-team">
                     <img src="./images/team/team_card1.jpg" alt="ІгорДем'яненко Product Designer" width="270">
                     <h3 class="team-name">Ігор Дем'яненко</h3>
                     <p class="position">Product Designer</p>
                 </li>
-                <li>
+                <li class="list-team">
                     <img src="./images/team/team_card2.jpg" alt="Ольга Рєпіна Frontend developer " width="270">
                     <h3 class="team-name">Ольга Рєпіна</h3>
                     <p class="position">Frontend developer</p>
                 </li>
-                <li>
+                <li class="list-team">
                     <img src="./images/team/team_card3.jpg" alt="Микола Тарасов Marketing" width="270">
                     <h3 class="team-name">Микола Тарасов</h3>
                     <p class="position">Marketing</p>
                 </li>
-                <li>
+                <li class="list-team">
                     <img src="./images/team/team_card4.jpg" alt="Михайло Єрмаков UI Designer" width="270">
                     <h3 class="team-name">Михайло Єрмаков</h3>
                     <p class="position">UI Designer</p>
@@ -105,12 +104,11 @@
     </main>
 
     <footer class="footer">
-        <a class="logo" href="./index.html">
-            <span class="logo-web logo">Web</span>
-            <span class="logo-studio logo">Studio</span></a>
-        <address>
+        <a class="logo-footer" href="./index.html">
+            <span class="logo-web-footer logo">Web</span><span class="logo-studio-footer logo">Studio</span></a>
+        <address class="adres">
             <ul>
-                <li><a href="https://goo.gl/maps/ad4JmQGrXdCTPTx86" class="adres" ></a> м. Київ, пр-т Лесі Українки, 26</li>
+                <li><a href="https://goo.gl/maps/ad4JmQGrXdCTPTx86" class="adres-maps" ></a> м. Київ, пр-т Лесі Українки, 26</li>
                 <li><a href="mailto:info@devstudio.com" class="footer-contact" >info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111" class="footer-contact" >+38 096 111 11 11</a></li>
             </ul>
