--- a/portfolio.html.html
+++ b/portfolio.html.html
@@ -20,8 +20,7 @@
             <!--logo-->
     
             <a class="logo" href="./index.html">
-                <span class="logo-web logo">Web</span>
-                <span class="logo-studio logo">Studio</span></a>
+                <span class="logo-web logo">Web</span><span class="logo-studio logo">Studio</span></a>
             <!--nav header-->
             <ul class="site-nav">
                 <li><a href="./index.html" class="link">Студія</a></li>
@@ -37,6 +36,7 @@
     </header>
 
     <main>
+    <section>
         <!--кнопки-->
         <ul>
             <li><button type="button" class="portfolio-button">Усі</button></li>
@@ -113,22 +113,23 @@
             </li>
             <li class="item-work">
                 <a class="link-portfolio" href="">
-                    <img class="image-portfolio" src=" ./images/project/img-9.jpg" alt="приклад роботи" width="370" height="294">
+                    <img class="image-portfolio" src=" ./images/project/img-9.jpg" alt="приклад роботи" width="370"
+                        height="294">
                     <h1 class="title-portfolio">Growing Business</h1>
                     <p class="lead-portfolio">Додаток</p>
                 </a>
-        
             </li>
         </ul>
+    </section>
     </main>
 
     <footer class="footer">
-        <a class="logo" href="./index.html">
-            <span class="logo-web logo">Web</span>
-            <span class="logo-studio logo">Studio</span></a>
-        <address>
+        <a class="logo-footer" href="./index.html">
+            <span class="logo-web-footer logo">Web</span><span class="logo-studio-footer logo">Studio</span></a>
+        <address class="adres">
             <ul>
-                <li><a href="https://goo.gl/maps/ad4JmQGrXdCTPTx86" class="adres"></a> м. Київ, пр-т Лесі Українки, 26</li>
+                <li><a href="https://goo.gl/maps/ad4JmQGrXdCTPTx86" class="adres-maps"></a> м. Київ, пр-т Лесі Українки, 26
+                </li>
                 <li><a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
             </ul>
