--- a/portfolio.html.html
+++ b/portfolio.html.html
@@ -128,7 +128,7 @@
             <span class="logo-web-footer logo">Web</span><span class="logo-studio-footer logo">Studio</span></a>
         <address class="adres">
             <ul>
-                <li><a href="https://goo.gl/maps/ad4JmQGrXdCTPTx86" class="adres-maps"></a> м. Київ, пр-т Лесі Українки, 26
+                <li><a href="https://goo.gl/maps/ad4JmQGrXdCTPTx86" class="adres-maps">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li><a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
